# embassy-imxrt

./: Cargo.toml
examples/rt685s-evk-performance-tracing/: Cargo.toml  README.md
examples/rt685s-evk-performance-tracing/src/: lib.rs
src/: adc.rs  lib.rs
